added some file finding stuff for micronaut and then got this working with the protocol buffers.